# enumeration-synth

./: .gitignore  Cargo.toml  runs.txt
src/: gpu.cl  main.rs  main_astar.rs  main_astar_minmax.rs  main_astar_mixed.rs  main_gpu.rs  main_gpu_struct.rs  main_length_frontier.rs  main_min.rs  main_parallel.rs  main_random.rs
variants/: main_astar.rs  main_astar_greedy_cut.rs  main_astar_pos_hash.rs  main_custom_hash.rs  main_greedy_search.rs  main_length_frontier_parallel.rs  main_length_frontier_parallel_u8.rs  main_length_hash.rs  main_length_u8_queue.rs  main_order_arc.rs  main_perm.rs  main_perm_arr_flag_arr.rs  main_perm_array.rs  main_pre_solution_check.rs
