[package]
name = "compute_vec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic-counter = "1.0.1"
dynqueue = "0.3.0"
flurry = "0.5.0"
itertools = "0.12.1"
priority-queue = "2.0.2"
rayon = "1.9.0"
