[package]
name = "compute_vec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.1"
priority-queue = "2.0.2"
rand = "0.8.5"
rayon = "1.9.0"


[features]
store-candidates = []

default = ["store-candidates"]